ローカル通知のバッグを修正した

--- a/FoodPin/Base.lproj/Favorite.storyboard
+++ b/FoodPin/Base.lproj/Favorite.storyboard
@@ -133,7 +133,7 @@
         <!--Add Restaurant Controller-->
         <scene sceneID="gZ3-wb-FUO">
             <objects>
-                <tableViewController id="QyC-xJ-0Wg" customClass="AddRestaurantController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="AddRestaurantController" id="QyC-xJ-0Wg" customClass="AddRestaurantController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fR1-ze-7yL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
